--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,28 @@
   height: 40vmin;
   pointer-events: none;
 }
+.cards {
+  display: flex;
+  
+}
 
+
+
+.cards .card {
+  cursor: pointer;
+  transition: 400ms;
+}
+
+
+
+.cards .card:hover {
+  transform: scale(1, 1);
+}
+
+.cards:hover > .card:not(:hover) {
+  filter: blur(10px);
+  transform: scale(0.9, 0.9);
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
